<resources>
    <string name="app_name">写客</string>
    <string name="chanel_name">channelName</string>
    <string name="chanel_description">chaneldescription</string>
    <string name="alarm_set_select_date">选 择 日 期</string>
    <string name="alarm_set_select_time">选 择 时 间</string>
    <string name="alarm_set_repeat_everyday">每天重复</string>
    <string name="alarm_set_goback">返回</string>
    <string name="alarm_set_ok">确定</string>
    <string name="login_welcome">欢迎来到写客</string>
    <string name="login_username">账号:</string>
    <string name="login_password">密码: 字母或数字</string>
    <string name="login_button_text">登 录</string>
    <string name="login_new_user">新用户</string>
    <string name="login_remember_password">记住密码</string>
    <string name="register_password">密码:字母或数字</string>
    <string name="register_password_again">请再次确认您的密码</string>
    <string name="register_button_text">注 册</string>
    <string name="edit_word_goback">返回</string>
    <string name="edit_word_save">保存</string>
    <string name="nav_head_city">城市</string>
    <string name="nav_head_temperature">温度</string>
    <string name="nav_head_weather">天气</string>
    <string name="recite_word_recite">背诵</string>
    <string name="recite_word_test">测试</string>
    <string name="recite_word_lastone">上一个</string>
    <string name="recite_word_answer">答案</string>
    <string name="recite_word_nextone">下一个</string>
    <string name="search_word_button_text">搜索</string>
    <string name="search_word_tip">轻按编辑 长按加入我的词库</string>
    <string name="word_history_display_process">显示进度值</string>
    <string name="word_history_refresh">刷 新</string>
    <string name="activity_edit_group_management">分组管理</string>
    <string name="activity_edit_all_notes">全部笔记</string>
    <string name="activity_edit_work_notes">工 作</string>
    <string name="activity_edit_study_notes">学 习</string>
    <string name="activity_edit_life_notes">生 活</string>
    <string name="activity_edit_no_group_notes">未分组</string>
    <string name="activity_main_sort_by_date">按修改日期排序</string>
    <string name="activity_main_sort_new_to_old"><![CDATA[新->旧]]></string>
    <string name="activity_main_sort_old_to_new"><![CDATA[旧->新]]></string>
    <string name="activity_main_sort_by_create">按创建先后排序</string>
    <string name="activity_main_sort_last_to_now"><![CDATA[从前->最近]]></string>
    <string name="activity_main_sort_now_to_last"><![CDATA[最近->以前]]></string>
    <string name="nav_left_head_img">头像</string>
    <string name="nav_left_nav_left_petname">昵称</string>
    <string name="nav_left_password">密码</string>
    <string name="nav_left_personality">个性签名</string>
    <string name="nav_left_open_whether">打开天气</string>
    <string name="nav_left_change_mode">切换模式</string>
    <string name="nav_right_all_notes">全部笔记</string>
    <string name="nav_right_work_notes">工 作</string>
    <string name="nav_right_study_notes">学 习</string>
    <string name="nav_right_life_notes">生 活</string>
    <string name="nav_right_no_group_notes">未分组</string>
    <string name="nav_right_nodo_notes">待 办</string>
</resources>
