<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_left_head_background"
    android:background="@color/color_3">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_left_head_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@color/color_3"
        android:src="@drawable/myimg6"
        android:layout_centerInParent="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_left_head_petname"
        android:layout_above="@id/nav_left_head_personality"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_left_head_personality"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_left_head_city"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:layout_above="@id/nav_left_head_weather"
        android:layout_toLeftOf="@id/nav_left_head_temperature"
        android:text="@string/nav_head_city" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_left_head_temperature"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:layout_marginRight="10dp"
        android:layout_above="@id/nav_left_head_weather"
        android:layout_alignParentEnd="true"
        android:text="@string/nav_head_temperature"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_left_head_weather"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorBlack"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:layout_marginRight="10dp"
        android:text="@string/nav_head_weather"
        android:layout_marginBottom="120dp"/>

</RelativeLayout>