<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ui.AlarmSetActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:id="@+id/alarmSetActivity_topLinearLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/alarmSetActivity_topImg_left"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/alarmSetActivity_topImg_right"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alarmSetActivity_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alarm_set_select_date" />
        <!--<view-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@color/orange"/>这样子放有问题-->

        <TextView
            android:id="@+id/alarmSetActivity_select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alarm_set_select_time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/alarmSetActivity_buttomImg_left"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/alarmSetActivity_buttomImg_right"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:visibility="invisible" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/alarmSetActivity_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"></android.support.v4.view.ViewPager>
    </LinearLayout>
    <TextView
        android:id="@+id/alarmSetActivity_time_show"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="现在是多少点"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@id/alarmSetActivity_topLinearLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@id/alarmSetActivity_time_show">

        <CheckBox
            android:id="@+id/alarmSet_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/alarm_set_repeat_everyday"
            android:textColor="@color/button_color" />

        <Button
            android:id="@+id/alarmSet_Cancel"
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/alarm_set_goback"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/seeker_button_bg_selector"/>

        <Button
            android:id="@+id/alarmSet_Ok"
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/alarm_set_ok"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/seeker_button_bg_selector"/>
    </LinearLayout>
</RelativeLayout>
