<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ui.RegisterActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/registerActivity_back"
        android:src="@drawable/seeker_icon_back"/>
    <TextView
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/registerActivity_username"
        android:padding="4dp"
        android:theme="@style/seeker_editText_style"
        android:singleLine="true"
        android:textSize="15sp"
        android:textCursorDrawable="@drawable/seeker_edit_cursor_color"/>
    <EditText
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registerActivity_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/registerActivity_password"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:padding="4dp"
        android:theme="@style/seeker_editText_style"
        android:singleLine="true"
        android:textSize="15sp"
        android:textCursorDrawable="@drawable/seeker_edit_cursor_color"/>
    <EditText
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registerActivity_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/registerActivity_confirm"
        android:hint="@string/register_password_again"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:padding="4dp"
        android:theme="@style/seeker_editText_style"
        android:singleLine="true"
        android:textSize="15sp"
        android:textCursorDrawable="@drawable/seeker_edit_cursor_color" />
    <Button
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registerActivity_confirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/registerActivity_ok"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/seeker_button_bg_selector"
        android:text="@string/register_button_text"
        android:textSize="23sp"/>
</RelativeLayout>
